--- a/IoT Dallas of Things WPF/packages.config
+++ b/IoT Dallas of Things WPF/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MahApps.Metro" version="1.3.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net45" />
 </packages>
