--- a/IoT Dallas of Things WPF/App.config
+++ b/IoT Dallas of Things WPF/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="IoT_Dallas_of_Things_WPF.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <applicationSettings>
+        <IoT_Dallas_of_Things_WPF.Properties.Settings>
+            <setting name="Port" serializeAs="String">
+                <value>COM4</value>
+            </setting>
+        </IoT_Dallas_of_Things_WPF.Properties.Settings>
+    </applicationSettings>
 </configuration>
