--- a/IoT Dallas of Things WPF/IoT Dallas of Things WPF.csproj
+++ b/IoT Dallas of Things WPF/IoT Dallas of Things WPF.csproj
@@ -34,8 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>SmartBag.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ArduinoDriver, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -139,7 +138,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="SmartBag.ico" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Content\Images\SmartBag.ico" />
   </ItemGroup>
